Fix Chromium display bug, scrollbars otherwise taken into account for widths.

--- a/htdocs/modern/modern.css
+++ b/htdocs/modern/modern.css
@@ -57,6 +57,7 @@ body {
 #files {
 	padding: 4px 0 0;
 	overflow: auto;
+	overflow-y: overlay;
 	height: calc(100vh - 4em);
 }
 @media only screen and (max-width: 800px) {
